# Radikant-MessagePack-C

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  out.txt  performance_review  review  review.txt  test_bin
SRC/: builder.c  builder.h  decoder.c  decoder.h  encoder.c  encoder.h  error.c  error.h  messagepack.c  messagepack.h  object.c  object.h  query.c  query.h  skip.c  skip.h  stream.c  stream.h  types.h  zone.c  zone.h
SRC/tools/: endian.h  print.c  print.h
cmake/: Config.cmake.in  Radikant.cmake
cmake/cmp/: CMakeLists.txt
cmake/mpack/: CMakeLists.txt
documentation/: architecture.md  builder.md  decperf.md  notes.md  object.md  query.md  skip.md  streamer.md  zone.md
example/: CMakeLists.txt  array.c  basic.c  builder.c  example_messagepack.c  example_mp_simple.c  filter.c  map.c  nested.c  print.c  query.c  query_advanced.c  streaming.c
include/: radikant-messagepack-c.h
test/: CMakeLists.txt  debug_equal.c  generate_vectors.c  readme.md  test_adversarial.c  test_builder.c  test_equal.c  test_fuzz.c  test_messagepack.c  test_misuse.c  test_mp.c  test_object.c  test_perf.c  test_query.c  test_roundtrip.c  test_sax.c  test_security.c  test_stream.c  test_vector.c  test_zone.c
test/vectors/: generate_vectors.c
